--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <! doctype html>
 <html>
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>🤓</title>
+<style>
+body {
+    background-color: #0F111A;
+    color: #E5E9F0;
+}
+.main {
+    margin:0 auto;
+}
+</style>
 </head>
 <body>
-    hello world!
+    <div id="main">
+        <h1>Brendan Coates</h1>
+        gardener, musician, Los Angeles Tenants Union member, and memory worker<br><br>
+        About<br><br>
+        CV<br><br>
+        brendan.emerson.coates@gmail.com<br><br>
+        <a href="b-trees.net">b-trees</a>
+    </div>
 </body>
 </html>
