--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ body {
 <body>
     <div id="main">
         <h1>Brendan Coates</h1>
-        gardener, musician, Los Angeles Tenants Union member, and memory worker<br><br>
+        gardener, musician, Los Angeles Tenants Union member, memory worker<br><br>
         About<br><br>
         CV<br><br>
         brendan.emerson.coates@gmail.com<br><br>
-        <a href="b-trees.net">b-trees</a>
+        <a href="http://b-trees.net">b-trees</a>
     </div>
 </body>
 </html>
